--- a/css/style.css
+++ b/css/style.css
@@ -118,10 +118,10 @@
 }
 #wrap #main .section1 .sec1_container .sec1_content .slide_text1 .sec1_img1 {
   position: absolute;
-  left: calc(50% - 166px + 80px);
+  left: calc(50% - 132.5px + 80px);
   top: 20px;
   animation: sec1Img 2.5s ease-in infinite;
-  width: max-width;
+  width: 33%;
 }
 @keyframes sec1Img {
   0% {
@@ -174,7 +174,7 @@
 }
 #wrap #main .section1 .sec1_container .sec1_content .slide_text2 .sec1_img2 {
   position: absolute;
-  left: calc(50% - 61.5px + 155px);
+  left: calc(50% - 72.5px + 170px);
   top: 75px;
   animation: sec1Img2 4s ease-in-out infinite;
 }
@@ -459,10 +459,21 @@
   color: #000;
   letter-spacing: -0.5rem;
 }
-#wrap #main .section5 .sec5_container .background_img {
+#wrap #main .section5 .sec5_container .background_img1 {
   position: absolute;
   top: 100px;
-  left: calc(50% - 195px - 770px);
+  left: -12%;
+}
+#wrap #main .section5 .sec5_container .background_img1 img {
+  width: 130%;
+}
+#wrap #main .section5 .sec5_container .background_img2 {
+  position: absolute;
+  top: 100px;
+  left: -20%;
+}
+#wrap #main .section5 .sec5_container .background_img2 img {
+  width: 100%;
 }
 #wrap #main .section5 .sec5_container .sec5_content {
   position: absolute;
@@ -770,15 +781,8 @@
 }
 #wrap #main .section11 .sec11_container .sec11_gap1 {
   position: absolute;
-  top: 0;
-  left: 0;
-  left: calc(50% - 423px - 530px);
-  width: 423px;
-  height: 423px;
-}
-#wrap #main .section11 .sec11_container .sec11_gap1 > img {
-  width: 423px;
-  height: 423px;
+  top: -10%;
+  left: -2%;
 }
 #wrap #main .section11 .sec11_container .sec11_content {
   position: absolute;
@@ -842,22 +846,16 @@
 }
 #wrap #main .section11 .sec11_container .sec11_gap2 {
   position: absolute;
-  top: 570px;
+  top: 55%;
   left: calc(50% - 211.5px + 745px);
-  width: 423px;
-  height: 423px;
-}
-#wrap #main .section11 .sec11_container .sec11_gap2 > img {
-  width: 423px;
-  height: 423px;
 }
 #wrap #main .section12 {
   background-color: #000;
 }
-#wrap #main .section12 .sec12_container .backgrond_img {
+#wrap #main .section12 .sec12_container .backgrond_img img {
   position: absolute;
-  top: 0;
-  left: calc(50% - 407px + 540px);
+  top: -400px;
+  left: 60%;
 }
 #wrap #main .section12 .sec12_container .logo {
   position: absolute;
@@ -883,13 +881,12 @@
 }
 #wrap #main .section12 .sec12_container .number a img {
   float: right;
-  width: 80%;
+  width: 85%;
 }
 #wrap #main .section12 .sec12_container .sec12_content {
   opacity: 0;
   position: absolute;
-  top: 280px;
-  float: left;
+  top: 290px;
   left: calc(50% - 439.5px - 430px);
   width: 880px;
 }
@@ -904,7 +901,7 @@
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-position: under;
-  line-height: 73px;
+  line-height: 74px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom {
   color: #fff;
@@ -913,18 +910,18 @@
   padding-top: 50px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom .address {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom .address h3 {
   font-size: 1.875rem;
   font-weight: 600;
-  line-height: 37.8px;
+  line-height: 38px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom .address h4 {
   font-family: "SUIT";
   font-weight: 300;
   font-size: 1.1rem;
-  line-height: 26px;
+  line-height: 28px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom .mail {
   padding-bottom: 20px;
@@ -932,7 +929,7 @@
 #wrap #main .section12 .sec12_container .sec12_content .bottom .mail h3 {
   font-size: 1.875rem;
   font-weight: 600;
-  line-height: 37.8px;
+  line-height: 38px;
 }
 #wrap #main .section12 .sec12_container .sec12_content .bottom .mail h4 {
   font-family: "SUIT";
