--- a/css/response.css
+++ b/css/response.css
@@ -1,2 +1,792 @@
 @charset "UTF-8";
-/*반응형 화면 크기*//*# sourceMappingURL=response.css.map */
+@import url("/css/fonts.css");
+@import url("/css/reset.css");
+/*반응형 화면 크기*/
+* {
+  box-sizing: border-box;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* 모바일 MAX 768px */
+@media all and (max-width: 768px) {
+  #wrap .header .header-container .logo {
+    position: absolute;
+    left: 10%;
+    top: 45px;
+  }
+  #wrap .header .header-container .logo .logo-btn img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 173px;
+    height: 40px;
+  }
+  #wrap .header .header-container .menu {
+    display: none;
+  }
+  #wrap .header .header-container .mobile-menu-btn {
+    display: block;
+  }
+  #wrap .section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #wrap .section .container {
+    position: relative;
+    max-width: 768px;
+    max-height: 570px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
+  #wrap .section .sec1_container .sec1_content {
+    position: absolute;
+    left: calc(50% - 172.5px);
+    top: 200px;
+    width: 345px;
+    height: 110px;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 {
+    position: absolute;
+    left: calc(50% - 88.5px);
+    top: 0;
+    width: 177px;
+    height: 56px;
+    animation: slide1 2s ease-in-out forwards;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .we {
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 3.4375rem;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .sec1_img1 {
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    width: 20%;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .are {
+    position: absolute;
+    right: 0;
+    bottom: -100px;
+    font-size: 2.2975rem;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text2 {
+    width: 345px;
+    height: 43px;
+    position: absolute;
+    left: calc(50% - 172.5px);
+    bottom: 0;
+    font-size: 2.935rem;
+    letter-spacing: -0.1rem;
+    animation: slide2 2.3s ease-in-out;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text2 .sec1_img2 {
+    position: absolute;
+    left: calc(50% - 11.5px + 30px);
+    top: 15px;
+    width: 8%;
+  }
+  @keyframes slide1 {
+    from {
+      left: -1000px;
+      opacity: 0;
+    }
+    to {
+      left: calc(50% - 88.5px);
+      opacity: 1;
+    }
+  }
+  @keyframes slide2 {
+    0% {
+      left: 1600px;
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.4;
+    }
+    100% {
+      left: calc(50% - 172.5px);
+      opacity: 1;
+    }
+  }
+  #wrap .section .sec2_container {
+    animation: sec2Fade 2s ease-in-out 3s forwards;
+  }
+  #wrap .section .sec2_container .sec2_content {
+    position: absolute;
+    top: 220px;
+    left: calc(50% - 150px);
+    width: 300px;
+    height: 116px;
+  }
+  #wrap .section .sec2_container .sec2_content .h3 {
+    font-size: 1.125rem;
+    letter-spacing: -0.1rem;
+    position: absolute;
+    left: 45px;
+    top: 0;
+  }
+  #wrap .section .sec2_container .sec2_content .h4 {
+    font-size: 1.875rem;
+    font-weight: 700;
+    line-height: 33px;
+    position: absolute;
+    left: 0;
+    top: 40px;
+  }
+  @keyframes sec2Fade {
+    0% {
+      opacity: 0;
+      transform: "translateY(300px)";
+    }
+    30% {
+      opacity: 0.3;
+    }
+    70% {
+      opacity: 0.7;
+    }
+    100% {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  #wrap .section .sec3_container .sec3_content {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: 200px;
+    width: 320px;
+    height: 227px;
+  }
+  #wrap .section .sec3_container .sec3_content .about {
+    left: calc(50% - 54px);
+    font-size: 3.25rem;
+    letter-spacing: -0.1rem;
+    line-height: 0;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap {
+    position: absolute;
+    top: 80px;
+    left: calc(50% - 160px);
+    width: 320px;
+    height: 34px;
+    font-size: 3.125rem;
+    line-height: 35px;
+    font-weight: 250;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap .our {
+    left: calc(50% - 38.5px - 75px);
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap a img {
+    left: calc(50% - 21.5px);
+    top: 0;
+    width: 43px;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap .we {
+    left: calc(50% - 36px + 80px);
+  }
+  #wrap .section .sec3_container .sec3_content .perfective {
+    font-size: 3.25rem;
+    left: calc(50% - 81.5px);
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec4_container .sec4_content {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: 180px;
+    width: 320px;
+    height: 280px;
+  }
+  #wrap .section .sec4_container .sec4_content .about {
+    left: calc(50% - 54px);
+    font-size: 3.25rem;
+    letter-spacing: -0.1rem;
+    line-height: 20px;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap {
+    top: 60px;
+    width: 320px;
+    height: 143px;
+    font-size: 3.125rem;
+    line-height: 35px;
+    font-weight: 250;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text1 .sec4_brace1 {
+    top: 50px;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text1 .left {
+    left: calc(50% - 116px);
+    top: 0;
+    font-size: 1.4375rem;
+    line-height: 23.7px;
+    width: 232px;
+    height: 46px;
+    display: flex;
+    text-align: center;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text2 .right {
+    left: calc(50% - 106.5px);
+    top: 70px;
+    font-size: 0.875rem;
+    line-height: 20px;
+    letter-spacing: -0.06rem;
+    width: 207px;
+    height: 73px;
+    display: flex;
+    text-align: center;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text2 .sec4_brace2 {
+    top: 50px;
+  }
+  #wrap .section .sec4_container .sec4_content .perfective {
+    font-size: 3.25rem;
+    left: calc(50% - 81.5px);
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .background_img1 {
+    top: -20%;
+    left: -90%;
+  }
+  #wrap .section .sec5_container .background_img1 img {
+    width: 100%;
+  }
+  #wrap .section .sec5_container .background_img2 {
+    top: 15%;
+    left: 0;
+  }
+  #wrap .section .sec5_container .background_img2 img {
+    width: 200%;
+  }
+  #wrap .section .sec5_container .sec5_content {
+    left: calc(50% - 180px);
+    top: 110px;
+    width: 190px;
+    height: 170px;
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img1 {
+    left: calc(50% - 76px);
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img1 img {
+    width: 45%;
+    width: 76px;
+    height: 73px;
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img2 {
+    left: calc(50% - 72px + 45px);
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img2 img {
+    width: 130%;
+  }
+  #wrap .section .sec5_container .sec5_gap {
+    left: calc(50% - 154px);
+    top: 200px;
+    width: 308px;
+    height: 250px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 {
+    width: 163px;
+    height: 83px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 h3 {
+    top: 0;
+    width: 102px;
+    height: 46px;
+    font-size: 4.5625rem;
+    line-height: 45px;
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 h4 {
+    width: 163px;
+    height: 25px;
+    font-size: 2.5rem;
+    line-height: 10px;
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 {
+    width: 308px;
+    height: 126px;
+    left: calc(50% - 154px);
+    bottom: 10px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 h5 {
+    padding-bottom: 20px;
+    font-size: 1.4375rem;
+    font-weight: 500;
+    line-height: 29px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 h6 {
+    font-size: 0.875rem;
+    font-weight: 300;
+    line-height: 21px;
+    letter-spacing: -0.05rem;
+  }
+  #wrap .section .sec6_container .sec6_content {
+    left: calc(50% - 75px);
+    width: 150px;
+    height: 232px;
+  }
+  #wrap .section .sec6_container .sec6_content .contact {
+    left: calc(50% - 68.5px);
+    font-size: 3.25rem;
+    letter-spacing: -0.03rem;
+  }
+  #wrap .section .sec6_container .sec6_content .sec6_gap {
+    left: calc(50% - 69.5px);
+    top: 95px;
+    width: 139px;
+    height: 34px;
+    font-size: 3.125rem;
+  }
+  #wrap .section .sec6_container .sec6_content .sec6_gap img {
+    left: calc(50% - 21.5px);
+    width: 43px;
+    height: 42px;
+  }
+  #wrap .section .sec6_container .sec6_content .proposal {
+    bottom: 0;
+    font-size: 3.25rem;
+    line-height: 63px;
+    letter-spacing: -0.03rem;
+  }
+  #wrap .top-btn .top-button {
+    z-index: 5;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+  }
+  #wrap .top-btn .top-button .pc-image {
+    display: none;
+  }
+  #wrap .top-btn .top-button .mo-image {
+    display: block;
+    width: 48px;
+    height: 48px;
+  }
+}
+/* 모바일 MAX 375px  -->  모바일버전 디자인 사이즈 */
+@media all and (max-width: 380px) {
+  #wrap .header .header-container {
+    width: 100%;
+    height: 80px;
+    position: fixed;
+  }
+  #wrap .header .header-container .logo {
+    position: absolute;
+    left: 9%;
+    top: 30px;
+  }
+  #wrap .header .header-container .logo .logo-btn img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 112px;
+    height: 26px;
+  }
+  #wrap .header .header-container .mobile-menu-btn {
+    position: absolute;
+    right: 9%;
+    top: 35px;
+  }
+  #wrap .section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #wrap .section .container {
+    position: relative;
+    max-width: 768px;
+    max-height: 570px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
+  #wrap .section .sec1_container .sec1_content {
+    position: absolute;
+    left: calc(50% - 172.5px);
+    top: 200px;
+    width: 345px;
+    height: 110px;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 {
+    position: absolute;
+    left: calc(50% - 88.5px);
+    top: 0;
+    width: 177px;
+    height: 56px;
+    animation: slide1 2s ease-in-out forwards;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .we {
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 3.4375rem;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .sec1_img1 {
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    width: 20%;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text1 .are {
+    position: absolute;
+    right: 0;
+    bottom: -100px;
+    font-size: 2.2975rem;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text2 {
+    width: 345px;
+    height: 43px;
+    position: absolute;
+    left: calc(50% - 172.5px);
+    bottom: 0;
+    font-size: 2.935rem;
+    letter-spacing: -0.1rem;
+    animation: slide2 2.3s ease-in-out;
+  }
+  #wrap .section .sec1_container .sec1_content .slide_text2 .sec1_img2 {
+    position: absolute;
+    left: calc(50% - 11.5px + 30px);
+    top: 15px;
+    width: 8%;
+  }
+  @keyframes slide1 {
+    from {
+      left: -1000px;
+      opacity: 0;
+    }
+    to {
+      left: calc(50% - 88.5px);
+      opacity: 1;
+    }
+  }
+  @keyframes slide2 {
+    0% {
+      left: 1600px;
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.4;
+    }
+    100% {
+      left: calc(50% - 172.5px);
+      opacity: 1;
+    }
+  }
+  #wrap .section .sec2_container {
+    animation: sec2Fade 2s ease-in-out 3s forwards;
+  }
+  #wrap .section .sec2_container .sec2_content {
+    position: absolute;
+    top: 220px;
+    left: calc(50% - 150px);
+    width: 300px;
+    height: 116px;
+  }
+  #wrap .section .sec2_container .sec2_content .h3 {
+    font-size: 1.125rem;
+    letter-spacing: -0.1rem;
+    position: absolute;
+    left: 45px;
+    top: 0;
+  }
+  #wrap .section .sec2_container .sec2_content .h4 {
+    font-size: 1.875rem;
+    font-weight: 700;
+    line-height: 33px;
+    position: absolute;
+    left: 0;
+    top: 40px;
+  }
+  @keyframes sec2Fade {
+    0% {
+      opacity: 0;
+      transform: "translateY(300px)";
+    }
+    30% {
+      opacity: 0.3;
+    }
+    70% {
+      opacity: 0.7;
+    }
+    100% {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  #wrap .section .sec3_container .sec3_content {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: 200px;
+    width: 320px;
+    height: 227px;
+  }
+  #wrap .section .sec3_container .sec3_content .about {
+    left: calc(50% - 54px);
+    font-size: 3.25rem;
+    letter-spacing: -0.1rem;
+    line-height: 0;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap {
+    position: absolute;
+    top: 80px;
+    left: calc(50% - 160px);
+    width: 320px;
+    height: 34px;
+    font-size: 3.125rem;
+    line-height: 35px;
+    font-weight: 250;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap .our {
+    left: calc(50% - 38.5px - 75px);
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap a img {
+    left: calc(50% - 21.5px);
+    top: 0;
+    width: 43px;
+  }
+  #wrap .section .sec3_container .sec3_content .sec3_gap .we {
+    left: calc(50% - 36px + 80px);
+  }
+  #wrap .section .sec3_container .sec3_content .perfective {
+    font-size: 3.25rem;
+    left: calc(50% - 81.5px);
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec4_container .sec4_content {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: 180px;
+    width: 320px;
+    height: 280px;
+  }
+  #wrap .section .sec4_container .sec4_content .about {
+    left: calc(50% - 54px);
+    font-size: 3.25rem;
+    letter-spacing: -0.1rem;
+    line-height: 20px;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap {
+    top: 60px;
+    width: 320px;
+    height: 143px;
+    font-size: 3.125rem;
+    line-height: 35px;
+    font-weight: 250;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text1 .sec4_brace1 {
+    top: 50px;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text1 .left {
+    left: calc(50% - 116px);
+    top: 0;
+    font-size: 1.4375rem;
+    line-height: 23.7px;
+    width: 232px;
+    height: 46px;
+    display: flex;
+    text-align: center;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text2 .right {
+    left: calc(50% - 106.5px);
+    top: 70px;
+    font-size: 0.875rem;
+    line-height: 20px;
+    letter-spacing: -0.06rem;
+    width: 207px;
+    height: 73px;
+    display: flex;
+    text-align: center;
+  }
+  #wrap .section .sec4_container .sec4_content .sec4_gap .sec4_text2 .sec4_brace2 {
+    top: 50px;
+  }
+  #wrap .section .sec4_container .sec4_content .perfective {
+    font-size: 3.25rem;
+    left: calc(50% - 81.5px);
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .background_img1 {
+    top: -20%;
+    left: -90%;
+  }
+  #wrap .section .sec5_container .background_img1 img {
+    width: 100%;
+  }
+  #wrap .section .sec5_container .background_img2 {
+    top: 15%;
+    left: 0;
+  }
+  #wrap .section .sec5_container .background_img2 img {
+    width: 200%;
+  }
+  #wrap .section .sec5_container .sec5_content {
+    left: calc(50% - 180px);
+    top: 110px;
+    width: 190px;
+    height: 170px;
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img1 {
+    left: calc(50% - 76px);
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img1 img {
+    width: 45%;
+    width: 76px;
+    height: 73px;
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img2 {
+    left: calc(50% - 72px + 45px);
+  }
+  #wrap .section .sec5_container .sec5_content .sec5_img2 img {
+    width: 130%;
+  }
+  #wrap .section .sec5_container .sec5_gap {
+    left: calc(50% - 154px);
+    top: 200px;
+    width: 308px;
+    height: 250px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 {
+    width: 163px;
+    height: 83px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 h3 {
+    top: 0;
+    width: 102px;
+    height: 46px;
+    font-size: 4.5625rem;
+    line-height: 45px;
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .sec5_gap .text1 h4 {
+    width: 163px;
+    height: 25px;
+    font-size: 2.5rem;
+    line-height: 10px;
+    letter-spacing: -0.1rem;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 {
+    width: 308px;
+    height: 126px;
+    left: calc(50% - 154px);
+    bottom: 10px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 h5 {
+    padding-bottom: 20px;
+    font-size: 1.4375rem;
+    font-weight: 500;
+    line-height: 29px;
+  }
+  #wrap .section .sec5_container .sec5_gap .text2 h6 {
+    font-size: 0.875rem;
+    font-weight: 300;
+    line-height: 21px;
+    letter-spacing: -0.05rem;
+  }
+  #wrap .section .sec6_container .sec6_content {
+    left: calc(50% - 75px);
+    width: 150px;
+    height: 232px;
+  }
+  #wrap .section .sec6_container .sec6_content .contact {
+    left: calc(50% - 68.5px);
+    font-size: 3.25rem;
+    letter-spacing: -0.03rem;
+  }
+  #wrap .section .sec6_container .sec6_content .sec6_gap {
+    left: calc(50% - 69.5px);
+    top: 95px;
+    width: 139px;
+    height: 34px;
+    font-size: 3.125rem;
+  }
+  #wrap .section .sec6_container .sec6_content .sec6_gap img {
+    left: calc(50% - 21.5px);
+    width: 43px;
+    height: 42px;
+  }
+  #wrap .section .sec6_container .sec6_content .proposal {
+    bottom: 0;
+    font-size: 3.25rem;
+    line-height: 63px;
+    letter-spacing: -0.03rem;
+  }
+  #wrap .section .sec7_container .sec7_content {
+    left: calc(50% - 141px);
+    width: 282px;
+    height: 236px;
+  }
+  #wrap .section .sec7_container .sec7_content .proposal {
+    left: calc(50% - 75px);
+    font-size: 3.25rem;
+    line-height: 62.97px;
+    letter-spacing: -0.03rem;
+  }
+  #wrap .section .sec7_container .sec7_content .sec7_gap {
+    top: 100px;
+    width: 282px;
+    height: 56px;
+    font-size: 3.125rem;
+  }
+  #wrap .section .sec7_container .sec7_content .sec7_gap .sec7_text {
+    display: none;
+  }
+  #wrap .section .sec7_container .sec7_content .sec7_gap .mo_sec7_text {
+    display: block;
+    width: 225px;
+    position: absolute;
+    left: calc(50% - 112.5px);
+    top: 0;
+    font-family: "SUIT";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: -0.05rem;
+    line-height: 130%;
+    text-align: center;
+    color: #000;
+  }
+  #wrap .section .sec7_container .sec7_content .contact {
+    left: calc(50% - 52.5px);
+    bottom: 0;
+    font-size: 2.5rem;
+    letter-spacing: -0.03rem;
+    line-height: 48.44px;
+  }
+  #wrap .section .sec7_container .sec7_content .object {
+    width: 65px;
+    height: 40px;
+    left: calc(50% - 32.5px + 45px);
+    bottom: 0;
+  }
+  #wrap .section .sec7_container .sec7_content .object .twinkle {
+    width: 33px;
+    height: 33px;
+    bottom: 5px;
+  }
+  #wrap .section .sec7_container .sec7_content .object .arrow {
+    bottom: 15px;
+    width: 18px;
+    height: 16px;
+    background-image: url(../img/img_14.png);
+  }
+  #wrap .top-btn .top-button {
+    z-index: 5;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+  }
+  #wrap .top-btn .top-button .pc-image {
+    display: none;
+  }
+  #wrap .top-btn .top-button .mo-image {
+    display: block;
+    width: 48px;
+    height: 48px;
+  }
+}/*# sourceMappingURL=response.css.map */
