--- a/css/response.scss
+++ b/css/response.scss
@@ -774,7 +774,7 @@
                 bottom: 15px;
                 width: 18px;
                 height: 16px;
-                background-image: url(../img/img_14.png);
+                // background-image: url(../img/img_14.png);
               }
             }
           }
